--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -11,12 +11,12 @@
   box-sizing: border-box;
   margin: 0 auto;
   max-width: 100%;
-  padding: 1.5em;
+  padding: 2em;
   display: flex;
   align-items: center;
 
   @media (--media-min-small) {
-    padding: 1.5em 1.5em;
+    padding: 2em 2em;
   }
 }
 
@@ -76,6 +76,7 @@
   @nest & ul li a {
     display: block;
     color: inherit;
+    font-size: var(--font-base-size);
     font-weight: bold;
     text-decoration: none;
     transition: all 200ms ease;
@@ -103,7 +104,7 @@
     }
 
     @nest & ul li a {
-      padding: 0.5rem 1.5rem;
+      padding: 0.5rem 2rem;
     }
   }
 
@@ -116,8 +117,18 @@
       justify-content: flex-end;
     }
 
-    @nest & ul li a {
+    @nest & ul li {
       padding: 1rem;
+
+      &:last-child {
+        padding-right: 0;
+      }
+    }
+  }
+
+  @media (--media-min-medium) {
+    @nest & ul li a {
+      font-size: var(--font-large-size);
     }
   }
 }
